--- a/src/Components/final_page.css
+++ b/src/Components/final_page.css
@@ -3,7 +3,7 @@
     padding: 20px;
     height:100vh;
     width:100%;
-    background-image:url("image5.jpeg");
+    background-color: gray;
   
   }
   
@@ -57,4 +57,29 @@
   .details-table tr:last-child td:last-child {
     border-bottom-right-radius: 15px;
   }
-  
+  .circle{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: yellow;
+  }
+  .icon{
+    padding: 35px;
+    
+  }
+  .data{
+    width: 400px;
+    height: 100px;
+    border-radius: 20px;
+    background-color: white;
+    padding: 20px;
+    margin-left: 20px;
+    margin-bottom:20px;
+  }
+  .left{
+    float: left;
+  }
+  .content{
+    padding: 25px;
+    font-size: large;
+  }
